[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprits/Fonts/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/startScreen.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/bg.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sons/Musicas/fragment-of-tomorrow-131881.mp3" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = SubResource( 7 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="startScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="bg" parent="." instance=ExtResource( 3 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="TileMap" parent="." instance=ExtResource( 4 )]

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -49.0
margin_right = 120.0
margin_bottom = 49.0

[node name="starBtn" type="Button" parent="controls"]
margin_right = 240.0
margin_bottom = 30.0
focus_neighbour_top = NodePath("../quitBtn")
theme = SubResource( 6 )
custom_colors/font_color_focus = Color( 0.964706, 0.92549, 0.0509804, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.92549, 0.0509804, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.396078, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="controlsBtn" type="Button" parent="controls"]
margin_top = 34.0
margin_right = 240.0
margin_bottom = 64.0
theme = SubResource( 6 )
custom_colors/font_color_focus = Color( 0.964706, 0.92549, 0.0509804, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.92549, 0.0509804, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.396078, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Controls"

[node name="quitBtn" type="Button" parent="controls"]
margin_top = 68.0
margin_right = 240.0
margin_bottom = 98.0
focus_neighbour_bottom = NodePath("../starBtn")
theme = SubResource( 6 )
custom_colors/font_color_focus = Color( 0.964706, 0.92549, 0.0509804, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0.92549, 0.0509804, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.396078, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="music_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="controls/starBtn" to="." method="_on_starBtn_pressed"]
[connection signal="pressed" from="controls/controlsBtn" to="." method="_on_controlsBtn_pressed"]
[connection signal="pressed" from="controls/quitBtn" to="." method="_on_quitBtn_pressed"]
